--- a/webapp/pages/auth.html
+++ b/webapp/pages/auth.html
@@ -1,1 +1,13 @@
-<!DOCTYPE html> <html> <head> <title>Авторизация</title> </head> <body> <script type="module"> import { authenticate } from './js/auth.js'; // Получить токен из URL const token = new URL(location.href).searchParams.get('token'); authenticate(token) .then(() => { console.log('User authorized!'); location.href = '/'; }) .catch(() => { console.error('Authorization failed'); }); </script> </body> </html>
+<!DOCTYPE html>
+<html>
+<head><title>Авторизация</title></head>
+<body>
+<form> <label> Телефон: <input type="tel" id="phone"> </label> <label> Пароль: <input type="password" id="password"> </label>
+
+<button type="submit">Войти</button>
+</form>
+<script type="module">
+     import { authenticate } from './js/auth.js'; // Получить токен из URL const token = new URL(location.href).searchParams.get('token'); authenticate(token) .then(() => { console.log('User authorized!'); location.href = '/'; }) .catch(() => { console.error('Authorization failed'); });
+</script>
+</body>
+</html>
